syntax = "proto3";
package pt.ulisboa.tecnico.classes.contract.student;

import "ClassesDefinitions.proto";

// Student -> ClassServer Service

message ListClassRequest {
  repeated int32 timestamp = 1;
}

message ListClassResponse {
  ResponseCode code = 1;
  ClassState classState = 2;
  repeated int32 timestamp = 3;
}

message EnrollRequest {
  Student student = 1;
  repeated int32 timestamp = 2;
}

message EnrollResponse {
  ResponseCode code = 1;
  repeated int32 timestamp = 2;
}

service StudentService {
  rpc listClass(ListClassRequest) returns (ListClassResponse);
  rpc enroll(EnrollRequest) returns (EnrollResponse);
  rpc lists(ListClassRequest) returns (ListClassResponse);
}
